added new tab All list

--- a/WorkshopExtended/Configs/System/chimeraMenus.conf
+++ b/WorkshopExtended/Configs/System/chimeraMenus.conf
@@ -3,7 +3,7 @@ MenuManager {
   MenuPreset ContentBrowser {
   }
   MenuPreset AddonPresetDialog {
-   Layout "{F3DD4756F4081672}UI/AddonPresetDialog.layout"
+   Layout "{F3DD4756F4081672}UI/Dialogs/AddonPresetDialog.layout"
    Class "WEXT_AddonPresetDialog"
   }
  }
